--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Document</title>
 <link rel="stylesheet" href="./Assets/style.css">
 </head>
-
+<header>
+    <h1> The Code Quiz</h1>
+</header>
+<nav>Highscores </nav>
 <body>
-   
+<p id= "timer">Timer:</p>
+   <div id = "answers">
+    <button class="button" id="A"></button>
+    <button class="button" id="B"></button>
+    <button class="button" id="C"></button>
+    <button class="button" id="D"></button>
+
+
+  </div>
     
 
 
@@ -26,6 +37,6 @@
 
 
 
-<script src="Assets/javascript.js"></script>
+
 </body>
 </html>
