styling for my sanity and questions

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <nav>Highscores </nav>
 <body>
 <p id= "timer">Timer:</p>
-   <div id = "answers">
+
+<button id="start">Start Game</button>
+
+    <div id = "answers">
     <button class="button" id="A"></button>
     <button class="button" id="B"></button>
     <button class="button" id="C"></button>
     <button class="button" id="D"></button>
-
-
   </div>
     
 
@@ -32,11 +33,7 @@
 
 
 
-
-
-
-
-
-
 </body>
+
+
 </html>
