working on building html. added more button parts

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <header>
     <h1> The Code Quiz</h1>
 </header>
+
 <nav>Highscores </nav>
+
 <body>
 <p id= "timer">Timer:</p>
-
+<containter>
 <button id="start">Start Game</button>
 
     <div id = "answers">
-    <button class="button" id="A"></button>
-    <button class="button" id="B"></button>
-    <button class="button" id="C"></button>
-    <button class="button" id="D"></button>
+    <button class="button" id="A" onclick="checkAnswer('a')"></button>
+    <button class="button" id="B" onclick="checkAnswer('b')"></button>
+    <button class="button" id="C" onclick="checkAnswer('c')"></button>
+    <button class="button" id="D" onclick="checkAnswer('d')"></button>
   </div>
     
-
+</containter>
 
 
 
