slowly adding more and more to html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 <containter id = "startpage">
     <p>This quiz will test your knowledge of coding so far and my ability to present said code.</p>
+
     <button id="start">Start Game</button>
+
+    <button id="highscores" onclick="showHighscores()">Highscores</button>
     </containter>
 
 
@@ -40,7 +43,10 @@
 
 <!-- Form for highscores? -->
 
-
+<form>
+    <label>Intials:</label>
+    <input type="text" id="initials"><br>
+</form>
 
 
 
