tutor session. fixed questions and funtion to make them pop up

--- a/index.html
+++ b/index.html
@@ -23,19 +23,15 @@
       <button id="start">Start Game</button>
     </containter>
 
-    <div id="quizPage">
-      <!-- <div id="questions"> -->
+    <div id="quizPage" class="hidden">
+     
         <h2 id="trivia"></h2>
 
         <div id="answers">
-          <!-- <button class="button" id="a" onclick="checkAnswer('a')"></button>
-    <button class="button" id="b" onclick="checkAnswer('b')"></button>
-    <button class="button" id="c" onclick="checkAnswer('c')"></button>
-    <button class="button" id="d" onclick="checkAnswer('d')"></button> -->
         </div>
-      <!-- </div> -->
+    
     </div>
-    <div id="endScreen">
+    <div id="endScreen" class ="hidden">
       <h2>Player Initals</h2>
       <h2>Final Score</h2>
 
