--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./Assets/style.css" />
+    <link rel="stylesheet" href="./Assets/css/style.css" />
   </head>
   <header>
     <h1>The Code Quiz</h1>
@@ -55,6 +55,6 @@
 
     
 
-    <script src="./Assets/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
   </body>
 </html>
