trying to fix time issue

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <header>
     <h1>The Code Quiz</h1>
-
-    <p>Highscores</p>
-    <p id="timer">Timer:</p>
+      <p>Highscores</p>
+        <p class="timer">Time: 
+          <span id="time">0   
+            </span>
+              </p>
   </header>
 
   <body>
